style.css
:root {
  --color-accent: oklch(0.7 0.1 214);
  --border-color: black;
  color-scheme: light dark;
}

.dark-mode {
    --border-color: white;
}

@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Oxygen:wght@300;400;700&display=swap');
body {
  /* Set line height to 1.5 times the font size
	   and use the OS’s UI font as the website font
	 */
  max-width: 120ch;
  display: block;
  margin: 8px;
  margin-inline: auto;

  accent-color: var(--color-accent); /* So all children will inherit the accent color */
}

/* Define font parameters */
body {
  font: 100%/1.5 system-ui;
  font-family: "Oxygen", sans-serif;
  font-weight: 400;
  font-style: normal;
}

nav {
  --border-color: oklch(50% 10% 200 / 50%);

  display: flex;
  margin-bottom: 2em;
  border-bottom-width: 1px;
  border-bottom-style: solid; 
  border-bottom-color: var(--border-color);
  a {
    flex: 1;
    text-decoration: none;
    color: inherit;
    text-align: center;
    padding: 0.8em;
  }
  a.current {
    border-bottom-width: 1px;
    border-bottom-style: solid; 
    border-bottom-width: 0.4em;
    border-bottom-color: var(--border-color);
  }
  a:hover {
    border-bottom-width: 1px;
    border-bottom-style: solid; 
    border-bottom-width: 0.4em;
    border-bottom-color: var(--color-accent);
    background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
  }

  ul {
    display: contents;
  }
  li {
    display: contents;
  }
}

.color-scheme {
  position: absolute;
  top: 2rem;
  right: 2rem;
}

form {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 1em;
  
  label {
    display: grid;
    grid-template-columns: subgrid;
    grid-column: 1 / -1;
  }

  button {
    grid-column: 1 / -1;
  }

  button, input, textarea, select {
    /* Pretty, but wide
    display: block;
    width: 100%;
    box-sizing: border-box;
    margin-block: 0.6em;
    */

    font: inherit;
  }
}

h1, h2, h3 {
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
}

img {
  border: 2px solid var(--color-accent);
  border-radius: 25px;
}
.cat-pics {
  width: 30em; 
  height: "auto";
}

/* Stats/Project Showcase */
.showcase {
  border-radius: 25px;
  border: 2px solid var(--color-accent);
  padding: 1em;
  margin-bottom: 3em;

  div {
    display: flex;
    justify-content: center;
    height: auto;
  }
}

/* Github Stats */
dl {
  display: grid;  
  grid-template-columns: repeat(4, 1fr); /* Adjust number of columns */
  gap: 1rem;
}
dt {
  grid-row: 1;
  padding: 0.3em 1em;

  font-weight: lighter;

  display: flex;
  justify-content: center;
  align-items: center;
  border: 2px solid var(--color-accent);
  border-radius: 8px;
}
dd {
  grid-row: 2;
  margin: 0;

  font-size: 2em;
  font-weight: bold;

  display: flex;
  justify-content: center;
  align-items: center;
}

/* Resume */
hr {
    display: block;
    height: 4px;
    border: 0;
    margin: 1em 0.5em;
    padding: 0;
    background-color: var(--border-color);
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
    height: auto;
}

.space-evenly {
  display: flex;
  width: auto;
  justify-content: space-evenly;
}

.space-between {
  display: flex;
  width: auto;
  justify-content: space-between;
}

.resume {
  .resume-border {
    border: 2px solid var(--border-color); 
    padding: 2em; 
    width: 80vw; 
    height: "auto";
  }

  .intro {
    text-align: center;

    h3 {
      font-weight: normal;
    }
  }

  article {
    padding: 0;
  }
  section {
    padding: 0;
  }

  h1 {
    color: rgb(0, 164, 167);
  }

  h1, h2, h3 {
    font-family: "Lexend", sans-serif;
    font-weight: 900;

    margin: 0;
    padding: 0;
  }


  ul {
    list-style-type: none;
  }
  li::before {
    content: '➤';
  }
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
  padding-bottom: 10em;

  article {
    display: grid;
    grid-template-rows: subgrid;
    grid-row: span 3;
    gap: 1em;
  }
  h2 {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
  }
  img {
    border: 1px solid var(--color-accent);
    padding: 2px;
  }
}

.chart-display {
  display: flex;
  flex-direction: row;
}

#projects-pie-plot {
  max-width: 20em;
  margin-block: 2em;

  overflow: visible;
}

.legend {
  flex: 1; /* fill all extra space */
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(9em, 1fr)); /* fit into multiple columns if possible */
  width: 10rem;
  padding: 2rem;

  border: 2px solid var(--color-accent);
  border-radius: 25px;

  .swatch {
    width: 1.2em;
    height: 1em;
    border-radius: 40%;
    background-color: var(--color);
    aspect-ratio: 1 / 1;
  }

  li {
    display: flex;
    justify-content: center;
    gap: 15px;
    padding: 0.5em;
  }
}

